* Added core.load_{target, flow, lib, pdk} functions to core API in place of target()
* Added -checkonly option to speed up new flow installation.
* Added asap7 target
* Added docker support for basic RTL2GDS tool chain
* Removed core.target() function

**Minor:**

* Schema: Changed lib 'driver' to move into cells (consistency)
* Schema: Added site symmetry to avoid full lef parser.
* Schema: Changed tool version switch to a list
* Schema: Changed 'asic', 'targetlib' to 'asic', 'logiclib' for clarity.
* Schema: Changed 'eda, 'report' parameter guideline to always use 'metric' as keyword
* Schema: Added -skipcheck option to speed up new target bringup

SiliconCompiler 0.4.1 (2022-01-06)
===================================

**Minor:**

* Fix bug in Yosys parameter requirements spec that made check_manifest() too scrict

SiliconCompiler 0.4.0 (2022-01-05)
===================================

**Major:**

* Schema: Add 'tool' key to PDK fields
* Schema: Remove unneeded 'record' keys
* Implement automatic record-keeping
* Implement checks that flow make sense in terms of file I/O and that required files resolve
* Allow importing multiple files with the same basename

**Minor:**

* Automatically configure KLayout path on macOS
* Allow importing multiple files with the same basename
* Implement -I CLI switch for include directory


SiliconCompiler 0.3.1 (2021-12-21)
===================================

**Minor:**

* Fix sc-show on Windows.

SiliconCompiler 0.3.0 (2021-12-21)
===================================

**Major:**

* Schema: add 'read' section.
* Schema: Add alternate frontend support.

**Minor:**

* Fix old version of Surelog bundled with wheels


SiliconCompiler 0.1.1 (2021-12-08)
===================================

**Minor:**

* Fix: Prevent sc-show crash when PDK files are not found.
* Fix: Ensure sc-show can find KLayout executable on Windows

SiliconCompiler 0.1.0 (2021-12-03)
===================================

**Major:**

* First public release!!!